--- a/html/mediumclone.html
+++ b/html/mediumclone.html
@@ -38,7 +38,7 @@
                         <div class="articleBody">
                             <div class="articleSummary">
                                 <div class="articleAuthor">
-                                    <!--<img src="../assets/article-thumbnail_4.webp" alt="React re-rendering and memoization"> -->
+                                    <img src="../assets/avatar-man_1.jpg" alt="author avatar">
                                     <p class="caption">Kolby Sisk</p>
                                 </div>
                                 <div class="articleTitle">
@@ -51,12 +51,13 @@
                             </div>
                             <div class="articleFeatures">
                                 <div class="articleInfo">
-                                    <ul>
-                                        <li class="label">Dec 3</li>
-                                        <li class="label">4 min read</li>
-                                        <li class="label">React</li>
-                                        <li class="label">Popular on Medium</li>
-                                    </ul>
+                                    <span class="label">Dec 3</span>
+                                    <span class="label"> - </span>
+                                    <span class="label">4 min read</span>
+                                    <span class="label"> - </span>
+                                    <span class="label">React</span>
+                                    <span class="label"> - </span>
+                                    <span class="label">Popular on Medium</span>
                                 </div>
                                 <div class="articleTools">
                                     <ion-icon name="bookmark-outline"></ion-icon>
@@ -72,8 +73,7 @@
                         <div class="articleBody">
                             <div class="articleSummary">
                                 <div class="articleAuthor">
-                                    <!--<img src="../assets/article-thumbnail_4.webp" alt="React re-rendering and memoization"> -->
-                                    <p class="caption">Navoda Nilakshi</p>
+                                    <img src="../assets/avatar-man_1.jpg" alt="author avatar">                                    <p class="caption">Navoda Nilakshi</p>
                                 </div>
                                 <div class="articleTitle">
                                     <h2>How To Sanitize Your Express App Against MongoDB Injection & Cross-Site
@@ -86,12 +86,13 @@
                             </div>
                             <div class="articleFeatures">
                                 <div class="articleInfo">
-                                    <ul>
-                                        <li class="label">Dec 16</li>
-                                        <li class="label">6 min read</li>
-                                        <li class="label">Web development</li>
-                                        <li class="label">Based on your reading history</li>
-                                    </ul>
+                                    <span class="label">Dec 16</span>
+                                    <span class="label"> - </span>
+                                    <span class="label">6 min read</span>
+                                    <span class="label"> - </span>
+                                    <span class="label">Web development</span>
+                                    <span class="label"> - </span>
+                                    <span class="label">Based on your reading history</span>
                                 </div>
                                 <div class="articleTools">
                                     <ion-icon name="bookmark-outline"></ion-icon>
@@ -107,8 +108,7 @@
                         <div class="articleBody">
                             <div class="articleSummary">
                                 <div class="articleAuthor">
-                                    <!--<img src="../assets/article-thumbnail_4.webp" alt="React re-rendering and memoization"> -->
-                                    <p class="caption">OJEBIYI FULNESS</p>
+                                    <img src="../assets/avatar-man_1.jpg" alt="author avatar">                                    <p class="caption">OJEBIYI FULNESS</p>
                                 </div>
                                 <div class="articleTitle">
                                     <h2>React 18: The Features and The Future</h2>
@@ -119,12 +119,13 @@
                             </div>
                             <div class="articleFeatures">
                                 <div class="articleInfo">
-                                    <ul>
-                                        <li class="label">Nov 24</li>
-                                        <li class="label">4 min read</li>
-                                        <li class="label">Reactjs</li>
-                                        <li class="label">Popular on Medium</li>
-                                    </ul>
+                                    <span class="label">Nov 24</span>
+                                    <span class="label"> - </span>
+                                    <span class="label">4 min read</span>
+                                    <span class="label"> - </span>
+                                    <span class="label">Reactjs</span>
+                                    <span class="label"> - </span>
+                                    <span class="label">Popular on Medium</span>
                                 </div>
                                 <div class="articleTools">
                                     <ion-icon name="bookmark-outline"></ion-icon>
@@ -140,8 +141,7 @@
                         <div class="articleBody">
                             <div class="articleSummary">
                                 <div class="articleAuthor">
-                                    <!--<img src="../assets/article-thumbnail_4.webp" alt="React re-rendering and memoization"> -->
-                                    <p class="caption">Kolby Sisk</p>
+                                    <img src="../assets/avatar-man_1.jpg" alt="author avatar">                                    <p class="caption">Kolby Sisk</p>
                                 </div>
                                 <div class="articleTitle">
                                     <h2>Understanding re-rendering and memoization in React</h2>
@@ -153,12 +153,13 @@
                             </div>
                             <div class="articleFeatures">
                                 <div class="articleInfo">
-                                    <ul>
-                                        <li class="label">Dec 6</li>
-                                        <li class="label">6 min read</li>
-                                        <li class="label">React</li>
-                                        <li class="label">Popular on Medium</li>
-                                    </ul>
+                                    <span class="label">Dec 6</span>
+                                    <span class="label"> - </span>
+                                    <span class="label">6 min read</span>
+                                    <span class="label"> - </span>
+                                    <span class="label">React</span>
+                                    <span class="label"> - </span>
+                                    <span class="label">Popular on Medium</span>
                                 </div>
                                 <div class="articleTools">
                                     <ion-icon name="bookmark-outline"></ion-icon>
@@ -174,8 +175,7 @@
                         <div class="articleBody">
                             <div class="articleSummary">
                                 <div class="articleAuthor">
-                                    <!--<img src="../assets/article-thumbnail_4.webp" alt="React re-rendering and memoization"> -->
-                                    <p class="caption">Kolby Sisk</p>
+                                    <img src="../assets/avatar-man_1.jpg" alt="author avatar">                                    <p class="caption">Kolby Sisk</p>
                                 </div>
                                 <div class="articleTitle">
                                     <h2>Understanding re-rendering and memoization in React</h2>
@@ -187,12 +187,13 @@
                             </div>
                             <div class="articleFeatures">
                                 <div class="articleInfo">
-                                    <ul>
-                                        <li class="label">Dec 6</li>
-                                        <li class="label">6 min read</li>
-                                        <li class="label">React</li>
-                                        <li class="label">Popular on Medium</li>
-                                    </ul>
+                                    <span class="label">Dec 6</span>
+                                    <span class="label"> - </span>
+                                    <span class="label">6 min read</span>
+                                    <span class="label"> - </span>
+                                    <span class="label">React</span>
+                                    <span class="label"> - </span>
+                                    <span class="label">Popular on Medium</span>
                                 </div>
                                 <div class="articleTools">
                                     <ion-icon name="bookmark-outline"></ion-icon>
@@ -207,7 +208,7 @@
                 </div>
             </section>
             <aside>
-                <div id="connectTotwitter"> <!--Scaricare logo twitter-->
+                <div id="connectTotwitter"> 
                     <div id="logoConnection">
                         <img src="../assets/Medium_logo.svg" alt="Medium logo">
                         <img src="../assets/twitter-logo_small.png" alt="Twitter logo">
@@ -219,7 +220,7 @@
                 </div>
                 <div id="recommendedTopics">
                     <h5>Recommended topics</h5>
-                    <div id="topicsChips"> <!--creare classi css per i chip-->
+                    <div id="topicsChips">
                         <span class="chip">Technology</span>
                         <span class="chip">Money</span>
                         <span class="chip">Business</span>
@@ -267,25 +268,35 @@
                 <div id="savedArticles">
                     <h5>Recently saved</h5>
                     <div id="savedArticlesList">
-                        <div class="savedArticle"> <!--articolo 1-->
-                            <!--<img src="../assets/article-thumbnail_4.webp" alt="React re-rendering and memoization"> -->
+                        <div class="savedArticle">
+                            <div class="articleAuthor"> <!--articolo 1-->
+                            <img src="../assets/article-thumbnail_4.webp" alt="React re-rendering and memoization">
                             <p class="caption">Eva Keiffenheim in Age of Awareness</p>
+                        </div>
                             <h5>The Feynman Technique Will Make You Remember What You Read</h5>
-                            <ul>
-                                <li class="label">Oct 2, 2020</li>
-                                <li class="label">6 min read</li>
-                                <li class="label"><ion-icon name="star"></ion-icon></li>
-                            </ul>
+                            <div class="articleInfo">
+                                <span class="label">Oct 2, 2020</span>
+                                <span class="label"> - </span>
+                                <span class="label">6 min read</span>
+                                <span class="label"> - </span>
+                                <span class="label"><ion-icon name="star"></ion-icon></span>
+                            
+                            </div>
                         </div>
                         <div class="savedArticle"> <!--articolo 2-->
-                            <!--<img src="../assets/article-thumbnail_4.webp" alt="React re-rendering and memoization"> -->
+                            <div class="articleAuthor">
+                            <img src="../assets/article-thumbnail_4.webp" alt="React re-rendering and memoization">
                             <p class="caption">chrissy teigen</p>
+                            </div>
                             <h5>Hi.</h5>
-                            <ul>
-                                <li class="label">Oct 27, 2020</li>
-                                <li class="label">8 min read</li>
-                                <li class="label"><ion-icon name="star"></ion-icon></li>
-                            </ul>
+                            <div class="articleInfo">
+                                <span class="label">Oct 27, 2020</span>
+                                <span class="label"> - </span>
+                                <span class="label">8 min read</span>
+                                <span class="label"> - </span>
+                                <span class="label"><ion-icon name="star"></ion-icon></span>
+                            
+                            </div>
                         </div>
                     </div>
                     <a href="#">See all(3)</a>
